# ConvGPU

./: .gitignore  CMakeLists.txt  README.md
src/: conv.cuh
test/: compile.bat  compile.sh  main.cu
